--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
 <body></body>
 <canvas id="pie_canvas" width="800" height="600"></canvas>
 
-<script type="module" src="demo.js">
+<script type="module">
     import Charts from './tinychartlib.js'
 
     var chartData = [
